Agregando compra, pago y confirmacion de pago

--- a/app/src/main/res/layout/fragment_anuncio_detalle.xml
+++ b/app/src/main/res/layout/fragment_anuncio_detalle.xml
@@ -64,6 +64,7 @@
 
             <Button
                 android:id="@+id/ComprarBtn"
+                android:onClick="GoToCompraFragment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="comprar" />
