--- a/app/src/main/res/layout/fragment_mi_cuenta.xml
+++ b/app/src/main/res/layout/fragment_mi_cuenta.xml
@@ -18,79 +18,84 @@
             android:layout_height="wrap_content"
             android:orientation="vertical" >
 
-            <EditText
-                android:id="@+id/nombres"
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="Nombres"
-                android:inputType="textPersonName"
-                android:singleLine="true" />
+                android:layout_height="wrap_content">
+                <EditText
+                    android:id="@+id/nombres"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="Nombres"
+                    android:inputType="textPersonName"
+                    android:singleLine="true" />
+            </android.support.design.widget.TextInputLayout>
 
-            <EditText
-                android:id="@+id/Apellidos"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="Apellidos"
-                android:inputType="textPersonName"
-                android:singleLine="true" />
 
-            <EditText
-                android:id="@+id/fechaNacimiento"
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="Fecha Nacimiento"
-                android:inputType="date"
-                android:singleLine="true" />
+                android:layout_height="match_parent">
 
-            <EditText
-                android:id="@+id/email"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="Correo"
-                android:inputType="textEmailAddress"
-                android:singleLine="true" />
+                <EditText
+                    android:id="@+id/apellidos"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="Apellidos"
+                    android:inputType="textPersonName"
+                    android:singleLine="true" />
+            </android.support.design.widget.TextInputLayout>
 
-            <EditText
-                android:id="@+id/celular"
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="Número de Celular"
-                android:inputType="phone"
-                android:singleLine="true" />
+                android:layout_height="match_parent">
 
-            <Spinner
-                android:id="@+id/sexo"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                <EditText
+                    android:id="@+id/edad"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="Edad"
+                    android:inputType="number"
+                    android:singleLine="true" />
 
-            <Spinner
-                android:id="@+id/provincia"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+            </android.support.design.widget.TextInputLayout>
 
-            <Spinner
-                android:id="@+id/distrito"
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="match_parent">
 
-            <EditText
-                android:id="@+id/direccion"
+                <EditText
+                    android:id="@+id/dni"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="DNI"
+                    android:inputType="textPersonName"
+                    android:singleLine="true" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="Dirección"
-                android:inputType="textPersonName"
-                android:singleLine="true" />
+                android:layout_height="match_parent">
+
+                <EditText
+                    android:id="@+id/celular"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="Número de Celular"
+                    android:inputType="phone"
+                    android:singleLine="true" />
+            </android.support.design.widget.TextInputLayout>
 
             <Button
                 android:id="@+id/ActualizarBtn"
-                android:layout_width="match_parent"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="90dp"
+                android:layout_marginTop="40dp"
                 android:text="Actualizar" />
 
         </LinearLayout>
