Mejorado Dashboard de Anuncios desde Servicio

--- a/app/src/main/res/layout/fragment_anuncios.xml
+++ b/app/src/main/res/layout/fragment_anuncios.xml
@@ -35,7 +35,8 @@
                 android:layout_height="250dp"
                 android:adjustViewBounds="false"
                 android:cropToPadding="false"
-                android:scaleType="centerCrop" />
+                android:scaleType="centerCrop"
+                android:src="@drawable/image_default"/>
 
             <TextView
                 android:id="@+id/content"
