--- a/app/src/main/res/layout/fragment_anuncios.xml
+++ b/app/src/main/res/layout/fragment_anuncios.xml
@@ -6,9 +6,9 @@
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cardProducto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:onClick="GoToAnuncioDetalleFragment"
         app:cardCornerRadius="4dp"
         app:cardElevation="4dp"
         app:cardPreventCornerOverlap="false"
@@ -36,7 +36,7 @@
                 android:adjustViewBounds="false"
                 android:cropToPadding="false"
                 android:scaleType="centerCrop"
-                android:src="@drawable/image_default"/>
+                android:src="@drawable/image_default" />
 
             <TextView
                 android:id="@+id/content"
